<resources>
    <string name="app_name">Pomodorian</string>
    <string name="begin_literal">Begin</string>
    <string name="initial_time">25:00</string>
    <string name="work_status">Working</string>
    <string name="status_literal">Status:</string>
    <string name="break_status">Break time!</string>
    <string name="stop_literal">Stop</string>
    <string name="reset_literal">Reset</string>
    <string name="start_literal">Start</string>
    <string name="void_status">Session not started.</string>
    <string name="time_over">00:00</string>
    <string name="start_work">Back to work!</string>
    <string name="relax_status">Relaxing</string>
    <string name="stopped_literal">Stopped</string>
    <string name="streak_literal">Streak:</string>
    <string name="streaks_literal">Streaks:</string>
    <string name="streaks_literal_lowercase">streaks</string>
    <string name="minutes">minutes</string>
    <string name="Minutes">Minutes:</string>
    <string name="Seconds">Seconds:</string>
    <string name="edit_work">Edit work duration</string>
    <string name="edit_break">Edit break duration</string>
    <string name="edit">Edit session durations</string>
    <string name="duration_literal">Total Duration:</string>
    <string name="streaks_list_placeholder">0</string>
    <string name="session_time_placeholder">Nil</string>
    <string name="duration_list_placeholder">0</string>
    <string name="session">Pomodoro Home</string>
    <string name="history">History</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="info_text">No recorded sessions. Get started by beginning a session and hitting save!</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="save_session">Save Session?</string>
    <string name="delete_session">Delete Session?</string>
    <string name="save_literal">Save</string>
    <string name="delete_literal">Delete</string>
    <string name="dont_save_literal">Don\'t Save</string>
    <string name="dont_delete_literal">Don\'t Delete</string>
    <string name="session_name_literal">Session Name</string>
    <string name="settings">Settings</string>
</resources>
