<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.pomodorian.MainActivity">

    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:fadingEdgeLength="12dp"
        android:gravity="center"
        android:text="@string/initial_time"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorPrimary"
        android:textSize="96sp" />


    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:indeterminate="false"
        android:max="1500"
        android:progress="0"/>

    <Button
        android:id="@+id/toggle_button"
        style="@style/ButtonStyle"
        android:layout_marginTop="24dp"
        android:onClick="startTimer"
        android:text="@string/begin_literal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/StandartTextViewStyle"
            android:layout_marginRight="8dp"
            android:text="@string/status_literal" />

        <TextView
            android:id="@+id/status_text_view"
            style="@style/StandartTextViewStyle"
            android:text="@string/void_status" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/StandartTextViewStyle"
            android:text="@string/streak_literal"/>

        <TextView
            style="@style/StandartTextViewStyle"
            android:id="@+id/streak_counter"
            android:layout_marginLeft="8dp"
            android:text="0"/>

    </LinearLayout>

</LinearLayout>